--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -8,7 +8,7 @@ import "../styles/base.css";
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
-	<title>Astro</title>
+	<title>windy-radix-palette</title>
 
 	<script is:inline>
 		const key = 'windy-radix-palette-theme'
