--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -48,7 +48,7 @@ import "../styles/base.css";
 			<!-- Shades -->
 			<div></div>
 			{[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12].map(n => (
-			<div class="text-center pb-2">{n}</div>
+			<div class="text-mauve-11 text-center text-sm pb-2">{n}</div>
 			))}
 
 			<!-- Neutrals -->
