--- a/docs/src/pages/docs/getting-started.astro
+++ b/docs/src/pages/docs/getting-started.astro
@@ -21,13 +21,12 @@ import DocsLayout from '~/layouts/DocsLayout.astro';
     <StepListItem heading="Configuration">
       <div class="prose">
         <p>Add the plugin to your <code>tailwind.config.js</code> file.</p>
-        <pre><code>{
-            `module.exports = {
+        <pre><code>{`module.exports = {
   plugins: [require('windy-radix-palette')]
 };`}</code></pre>
       </div>
     </StepListItem>
-    <StepListItem heading="Usage">
+    <StepListItem heading="Basic Usage">
       <div class="prose">
         <p>
           Tailwind classes for Radix Colors should now be available for use in
