--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -8,13 +8,13 @@ import BaseLayout from '~/layouts/BaseLayout.astro';
 		<ThemeToggleButton client:load />
 	</header>
 	<section class="w-full max-w-7xl mx-auto pt-6 pb-10 px-4">
-		<h1 class="mb-4 text-center font-semibold text-mauve-12 text-4xl">
+		<h1 class="mb-4 lg:text-center font-semibold text-mauve-12 text-4xl">
 			Bring Radix Colors to Tailwind CSS
 		</h1>
-		<p class="mb-8 text-center text-lg text-mauve-11">
+		<p class="mb-8 lg:text-center text-lg text-mauve-11">
 			Improving the compatibility of Radix Colors and Tailwind CSS.
 		</p>
-		<div class="flex items-center justify-center space-x-4">
+		<div class="flex items-center lg:justify-center space-x-4">
 			<a
 				href="/docs/getting-started"
 				class={[
