--- a/docs/src/pages/docs/options.astro
+++ b/docs/src/pages/docs/options.astro
@@ -6,5 +6,27 @@ import DocsLayout from '~/layouts/DocsLayout.astro';
   title="Options"
   description="Plugin options for windy-radix-palette"
 >
-  <div></div>
+  <div class="prose prose-headings:font-medium">
+    <h2>Colors</h2>
+    <p>
+      By default, CSS properties will be created for <strong>all</strong> colors
+      from the version of Radix Colors that is installed in your project. If you
+      would rather only include the properties for colors that you are planning to
+      use, you can pass these as an option to the plugin.
+    </p>
+    <pre><code>{`const radixColors = require('@radix-ui/colors');
+
+module.exports = {
+  plugins: [
+    require('windy-radix-palette')({
+      colors: {
+        mauveA: radixColors.mauveA,
+        mauveDarkA: radixColors.mauveDarkA,
+        red: radixColors.red,
+        redDark: radixColors.redDark,
+      },
+    }),
+  ],
+};`}</code></pre>
+  </div>
 </DocsLayout>
