feat: create typography plugin

--- a/docs/src/pages/docs/getting-started.astro
+++ b/docs/src/pages/docs/getting-started.astro
@@ -10,7 +10,7 @@ import DocsLayout from '~/layouts/DocsLayout.astro';
 >
   <StepList>
     <StepListItem heading="Installation">
-      <div class="prose">
+      <div class="prose prose-mauve">
         <p>
           Install <code>windy-radix-palette</code> and its peer dependencies using
           your package manager of choice.
@@ -19,7 +19,7 @@ import DocsLayout from '~/layouts/DocsLayout.astro';
       </div>
     </StepListItem>
     <StepListItem heading="Configuration">
-      <div class="prose">
+      <div class="prose prose-mauve">
         <p>Add the plugin to your <code>tailwind.config.js</code> file.</p>
         <pre><code>{`module.exports = {
   plugins: [require('windy-radix-palette')]
@@ -27,7 +27,7 @@ import DocsLayout from '~/layouts/DocsLayout.astro';
       </div>
     </StepListItem>
     <StepListItem heading="Basic Usage">
-      <div class="prose">
+      <div class="prose prose-mauve">
         <p>
           Tailwind classes for Radix Colors should now be available for use in
           your markup!
