--- a/docs/src/pages/docs/options.astro
+++ b/docs/src/pages/docs/options.astro
@@ -6,7 +6,7 @@ import DocsLayout from '~/layouts/DocsLayout.astro';
   title="Options"
   description="Plugin options for windy-radix-palette"
 >
-  <div class="prose prose-headings:font-medium">
+  <div class="prose prose-mauve prose-headings:font-medium">
     <h2>Colors</h2>
     <p>
       By default, CSS properties will be created for <strong>all</strong> colors
