docs: typography plugin

--- a/docs/src/layouts/DocsLayout.astro
+++ b/docs/src/layouts/DocsLayout.astro
@@ -2,7 +2,6 @@
 import { MobileMenu } from '~/components/MobileMenu';
 import { NavLink } from '~/components/NavLink';
 import { ThemeToggleButton } from '~/components/ThemeToggleButton';
-import { routes } from '~/lib/routes';
 import BaseLayout from './BaseLayout.astro';
 
 export interface Props {
@@ -11,6 +10,35 @@ export interface Props {
 }
 
 const { description, title } = Astro.props;
+
+const routes = [
+  {
+    label: 'Palette',
+    routes: [
+      {
+        label: 'Getting Started',
+        slug: '/docs/palette/getting-started',
+      },
+      {
+        label: 'Options',
+        slug: '/docs/palette/options',
+      },
+    ],
+  },
+  {
+    label: 'Typography',
+    routes: [
+      {
+        label: 'Getting Started',
+        slug: '/docs/typography/getting-started',
+      },
+      {
+        label: 'Demo',
+        slug: '/docs/typography/demo',
+      },
+    ],
+  },
+];
 ---
 
 <BaseLayout title={title} description={description}>
@@ -26,14 +54,23 @@ const { description, title } = Astro.props;
             <div class="pt-6 px-4">
               <ul>
                 {
-                  routes.map((route) => (
-                    <li>
-                      <NavLink
-                        href={route.slug}
-                        isActive={Astro.url.pathname === route.slug}
-                      >
-                        {route.label}
-                      </NavLink>
+                  routes.map((group) => (
+                    <li class="pb-6">
+                      <h3 class="px-4 py-2 text-sm font-medium">
+                        {group.label}
+                      </h3>
+                      <ul>
+                        {group.routes.map((route) => (
+                          <li>
+                            <NavLink
+                              href={route.slug}
+                              isActive={Astro.url.pathname === route.slug}
+                            >
+                              {route.label}
+                            </NavLink>
+                          </li>
+                        ))}
+                      </ul>
                     </li>
                   ))
                 }
@@ -46,17 +83,24 @@ const { description, title } = Astro.props;
   </header>
   <div class="flex pt-16">
     <aside class="hidden lg:block fixed w-[250px]">
-      <nav class="px-2 py-3">
+      <nav class="px-2 py-6">
         <ul>
           {
-            routes.map((route) => (
-              <li>
-                <NavLink
-                  href={route.slug}
-                  isActive={Astro.url.pathname === route.slug}
-                >
-                  {route.label}
-                </NavLink>
+            routes.map((group) => (
+              <li class="pb-6">
+                <h3 class="px-4 py-2 text-sm font-medium">{group.label}</h3>
+                <ul>
+                  {group.routes.map((route) => (
+                    <li>
+                      <NavLink
+                        href={route.slug}
+                        isActive={Astro.url.pathname === route.slug}
+                      >
+                        {route.label}
+                      </NavLink>
+                    </li>
+                  ))}
+                </ul>
               </li>
             ))
           }
@@ -67,7 +111,11 @@ const { description, title } = Astro.props;
       <main class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
         <header>
           <h1 class="text-3xl font-medium mb-2">{title}</h1>
-          <p class="text-mauve-11 text-lg mb-12">{description}</p>
+          {
+            description ? (
+              <p class="text-mauve-11 text-lg mb-8">{description}</p>
+            ) : null
+          }
         </header>
         <slot />
       </main>
