--- a/docs/src/layouts/BaseLayout.astro
+++ b/docs/src/layouts/BaseLayout.astro
@@ -1,48 +1,48 @@
 ---
 export interface Props {
-  description?: string;
-  title?: string;
+	description?: string;
+	title?: string;
 }
 
 const { description, title } = Astro.props;
 ---
 
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    {
-      title ? (
-        <title>{title} &ndash; windy-radix-palette</title>
-      ) : (
-        <title>windy-radix-palette</title>
-      )
-    }
-    {description ? <meta name="description" content={description} /> : null}
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width" />
+		{
+			title ? (
+				<title>{title} &ndash; windy-radix-palette</title>
+			) : (
+				<title>windy-radix-palette</title>
+			)
+		}
+		{description ? <meta name="description" content={description} /> : null}
 
-    <script is:inline>
-      const key = 'windy-radix-palette-theme';
-      const theme = (() => {
-        if (typeof localStorage !== 'undefined' && localStorage.getItem(key)) {
-          return localStorage.getItem(key);
-        }
-        if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
-          return 'dark';
-        }
-        return 'light';
-      })();
-      if (theme === 'light') {
-        document.documentElement.classList.remove('dark');
-        document.documentElement.style.colorScheme = 'light';
-      } else {
-        document.documentElement.classList.add('dark');
-        document.documentElement.style.colorScheme = 'dark';
-      }
-      window.localStorage.setItem(key, theme);
-    </script>
-  </head>
+		<script is:inline>
+			const key = "windy-radix-palette-theme";
+			const theme = (() => {
+				if (typeof localStorage !== "undefined" && localStorage.getItem(key)) {
+					return localStorage.getItem(key);
+				}
+				if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
+					return "dark";
+				}
+				return "light";
+			})();
+			if (theme === "light") {
+				document.documentElement.classList.remove("dark");
+				document.documentElement.style.colorScheme = "light";
+			} else {
+				document.documentElement.classList.add("dark");
+				document.documentElement.style.colorScheme = "dark";
+			}
+			window.localStorage.setItem(key, theme);
+		</script>
+	</head>
 
-  <body class="bg-mauve-1 text-mauve-12">
-    <slot />
-  </body>
+	<body class="bg-mauve-1 text-mauve-12">
+		<slot />
+	</body>
 </html>
