feat: aliasing functions and examples

--- a/docs/src/layouts/BaseLayout.astro
+++ b/docs/src/layouts/BaseLayout.astro
@@ -42,7 +42,7 @@ const { description, title } = Astro.props;
 		</script>
 	</head>
 
-	<body class="bg-mauve-1 text-mauve-12">
+	<body class="bg-neutral-1 text-hi-contrast">
 		<slot />
 	</body>
 </html>
