--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -364,17 +364,17 @@ import BaseLayout from "~/layouts/BaseLayout.astro";
 			{
 				[
 					"bg-blue-1",
-					"bg-indigo-2",
-					"bg-indigo-3",
-					"bg-indigo-4",
-					"bg-indigo-5",
-					"bg-indigo-6",
-					"bg-indigo-7",
+					"bg-blue-2",
+					"bg-blue-3",
+					"bg-blue-4",
+					"bg-blue-5",
+					"bg-blue-6",
+					"bg-blue-7",
 					"bg-blue-8",
 					"bg-blue-9",
-					"bg-indigo-10",
-					"bg-indigo-11",
-					"bg-indigo-12",
+					"bg-blue-10",
+					"bg-blue-11",
+					"bg-blue-12",
 				].map((bg) => <div class={`${bg} h-[35px]`} />)
 			}
 
