--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -145,7 +145,7 @@ const COLORS = [
 				</p>
 				<div class="flex items-center space-x-4">
 					<a
-						href="/palette/getting-started"
+						href="https://github.com/brattonross/windy-radix-palette"
 						class:list={[
 							"inline-flex",
 							"items-center",
@@ -164,7 +164,7 @@ const COLORS = [
 							"hover:shadow-[-15px_0_30px_-10px_var(--orangeA8),_0_0_30px_-10px_var(--pinkA8),_15px_0_30px_-10px_var(--violetA8)]",
 						]}
 					>
-						<span>Documentation</span>
+						<span>Get started</span>
 						<svg
 							width="15"
 							height="15"
@@ -173,25 +173,6 @@ const COLORS = [
 							xmlns="http://www.w3.org/2000/svg"
 							><path
 								d="M8.14645 3.14645C8.34171 2.95118 8.65829 2.95118 8.85355 3.14645L12.8536 7.14645C13.0488 7.34171 13.0488 7.65829 12.8536 7.85355L8.85355 11.8536C8.65829 12.0488 8.34171 12.0488 8.14645 11.8536C7.95118 11.6583 7.95118 11.3417 8.14645 11.1464L11.2929 8H2.5C2.22386 8 2 7.77614 2 7.5C2 7.22386 2.22386 7 2.5 7H11.2929L8.14645 3.85355C7.95118 3.65829 7.95118 3.34171 8.14645 3.14645Z"
-								fill="currentColor"
-								fill-rule="evenodd"
-								clip-rule="evenodd"></path>
-						</svg>
-					</a>
-					<a
-						href="https://github.com/brattonross/windy-radix-palette"
-						class="hover:bg-neutral-4 text-lo-contrast focus:ring-blue-7 inline-flex h-12 items-center space-x-2 rounded-md bg-transparent px-4 text-lg font-medium focus:outline-none focus:ring-2"
-						target="_blank"
-					>
-						<span>GitHub</span>
-						<svg
-							width="15"
-							height="15"
-							viewBox="0 0 15 15"
-							fill="none"
-							xmlns="http://www.w3.org/2000/svg"
-							><path
-								d="M3 2C2.44772 2 2 2.44772 2 3V12C2 12.5523 2.44772 13 3 13H12C12.5523 13 13 12.5523 13 12V8.5C13 8.22386 12.7761 8 12.5 8C12.2239 8 12 8.22386 12 8.5V12H3V3L6.5 3C6.77614 3 7 2.77614 7 2.5C7 2.22386 6.77614 2 6.5 2H3ZM12.8536 2.14645C12.9015 2.19439 12.9377 2.24964 12.9621 2.30861C12.9861 2.36669 12.9996 2.4303 13 2.497L13 2.5V2.50049V5.5C13 5.77614 12.7761 6 12.5 6C12.2239 6 12 5.77614 12 5.5V3.70711L6.85355 8.85355C6.65829 9.04882 6.34171 9.04882 6.14645 8.85355C5.95118 8.65829 5.95118 8.34171 6.14645 8.14645L11.2929 3H9.5C9.22386 3 9 2.77614 9 2.5C9 2.22386 9.22386 2 9.5 2H12.4999H12.5C12.5678 2 12.6324 2.01349 12.6914 2.03794C12.7504 2.06234 12.8056 2.09851 12.8536 2.14645Z"
 								fill="currentColor"
 								fill-rule="evenodd"
 								clip-rule="evenodd"></path>
