--- a/docs/src/layouts/BaseLayout.astro
+++ b/docs/src/layouts/BaseLayout.astro
@@ -21,11 +21,13 @@ const { description, title } = Astro.props;
 			)
 		}
 		{description ? <meta name="description" content={description} /> : null}
-
 		<script is:inline>
 			const key = "windy-radix-palette-theme";
 			const theme = (() => {
-				if (typeof localStorage !== "undefined" && localStorage.getItem(key)) {
+				if (
+					typeof localStorage !== "undefined" &&
+					localStorage.getItem(key)
+				) {
 					return localStorage.getItem(key);
 				}
 				if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
@@ -43,8 +45,7 @@ const { description, title } = Astro.props;
 			window.localStorage.setItem(key, theme);
 		</script>
 	</head>
-
-	<body class="bg-neutral-1 text-hi-contrast">
+	<body class="dark:bg-gray-1 text-hi-contrast bg-white antialiased">
 		<slot />
 	</body>
 </html>
